# twix

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt  rom.cpp  rom.hpp
src/components/assembler/: CMakeLists.txt
src/components/assembler/mos6502/: mos6502.cpp  mos6502.hpp
src/components/assembler/utils/: asm_utils.cpp  asm_utils.hpp
src/components/cores/: CMakeLists.txt
src/components/cores/mos6502/: addressing_modes.hpp  arithmetic.hpp  cpu.hpp  cycle_table.hpp  instructions.hpp  instructions_format.hpp  logical.hpp  memory.hpp  nesRom.hpp  nesRom_example.cpp  registers.hpp
src/components/utils/: rom.cpp  rom.hpp
src/system/nes/: nes.cpp  nes.hpp
src/tests/: CMakeLists.txt
src/tests/components/: CMakeLists.txt
src/tests/components/assembler/: CMakeLists.txt
src/tests/components/assembler/mos6502/: CMakeLists.txt  assembler.cpp  assembler.hpp  disassembler.hpp  test_main.cpp
src/tests/components/assembler/utils/: CMakeLists.txt  asm_utils_test.cpp
src/tests/components/cores/: CMakeLists.txt
src/tests/components/cores/mos6502/: instruction_logging_test.cpp  mos6502_test.hpp  test_main.cpp
src/tests/framework/: CMakeLists.txt  assertions.hpp  result_format.hpp  testing.hpp
